--- a/navbar.html
+++ b/navbar.html
@@ -32,16 +32,20 @@
         margin-right: 20px;
         margin-top: 20px;
        }
+       a{
+        text-decoration: none;
+        color: white;
+       }
     </style>
 </head>
 <body>
     <div id="main">
         <div id="left">Reebox</div>
         <div id="right">
-            <div>Men</div>
-            <div>Women</div>
-            <div>Login</div>
-            <div>Signup</div>
+            <div><a href="mens.html">Men</a></div>
+            <div><a href="mens.html">Women</a></div>
+            <div><a href="login.html">Login</a></div>
+            <div><a href="signup.html">Signup</a></div>
         </div>
     </div>
 </body>
